--- a/src/App.css
+++ b/src/App.css
@@ -4,29 +4,22 @@
     box-sizing: border-box;
 }
 
-
-body {
+html, body {
+    height: 100%;
+    width: 100%;
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     color: #333;
     line-height: 1.6;
 }
 
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+#root {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 
-h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-
-p {
-    margin-bottom: 15px;
-    font-size: 22px;
+main {
+    flex: 1;
 }
